@@ -4451,6 +4451,14 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|HRegionInfo
+name|regionInfo
+init|=
+name|rs
+operator|.
+name|getRegion
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|rs
@@ -4488,15 +4496,113 @@ else|else
 block|{
 name|LOG
 operator|.
-name|warn
+name|debug
 argument_list|(
-literal|"Node deleted but still in RIT: "
+literal|"The znode of region "
 operator|+
+name|regionInfo
+operator|.
+name|getRegionNameAsString
+argument_list|()
+operator|+
+literal|" has been deleted."
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
 name|rs
+operator|.
+name|isOpened
+argument_list|()
+condition|)
+block|{
+name|makeRegionOnline
+argument_list|(
+name|rs
+argument_list|,
+name|regionInfo
 argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+block|}
+block|}
+specifier|private
+name|void
+name|makeRegionOnline
+parameter_list|(
+name|RegionState
+name|rs
+parameter_list|,
+name|HRegionInfo
+name|regionInfo
+parameter_list|)
+block|{
+name|regionOnline
+argument_list|(
+name|regionInfo
+argument_list|,
+name|rs
+operator|.
+name|serverName
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"The master has opened the region "
+operator|+
+name|regionInfo
+operator|.
+name|getRegionNameAsString
+argument_list|()
+operator|+
+literal|" that was online on "
+operator|+
+name|rs
+operator|.
+name|serverName
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|this
+operator|.
+name|getZKTable
+argument_list|()
+operator|.
+name|isDisablingOrDisabledTable
+argument_list|(
+name|regionInfo
+operator|.
+name|getTableNameAsString
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|debugLog
+argument_list|(
+name|regionInfo
+argument_list|,
+literal|"Opened region "
+operator|+
+name|regionInfo
+operator|.
+name|getRegionNameAsString
+argument_list|()
+operator|+
+literal|" but "
+operator|+
+literal|"this table is disabled, triggering close of region"
+argument_list|)
+expr_stmt|;
+name|unassign
+argument_list|(
+name|regionInfo
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|/**    * New unassigned node has been created.    *    *<p>This happens when an RS begins the OPENING, SPLITTING or CLOSING of a    * region by creating a znode.    *    *<p>When this happens we must:    *<ol>    *<li>Watch the node for further children changed events</li>    *<li>Watch all new children for changed events</li>    *</ol>    */
