@@ -115,24 +115,6 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|executor
-operator|.
-name|EventHandler
-operator|.
-name|EventType
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
 name|master
 operator|.
 name|AssignmentManager
@@ -481,6 +463,11 @@ argument_list|(
 name|regionInfo
 argument_list|)
 decl_stmt|;
+name|boolean
+name|openedNodeDeleted
+init|=
+literal|false
+decl_stmt|;
 if|if
 condition|(
 name|regionState
@@ -502,51 +489,18 @@ name|OPEN
 argument_list|)
 condition|)
 block|{
-if|if
-condition|(
+name|openedNodeDeleted
+operator|=
 name|deleteOpenedNode
 argument_list|(
 name|expectedVersion
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|openedNodeDeleted
 condition|)
-block|{
-comment|// Remove region from in-memory transition and unassigned node from ZK
-name|this
-operator|.
-name|assignmentManager
-operator|.
-name|regionOnline
-argument_list|(
-name|regionInfo
-argument_list|,
-name|this
-operator|.
-name|sn
-argument_list|)
-expr_stmt|;
-name|debugLog
-argument_list|(
-name|regionInfo
-argument_list|,
-literal|"The master has opened the region "
-operator|+
-name|regionInfo
-operator|.
-name|getRegionNameAsString
-argument_list|()
-operator|+
-literal|" that was online on "
-operator|+
-name|this
-operator|.
-name|sn
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-else|else
 block|{
 name|LOG
 operator|.
@@ -581,6 +535,12 @@ literal|" because regions is NOT in RIT -- presuming this is because it SPLIT"
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+operator|!
+name|openedNodeDeleted
+condition|)
+block|{
 if|if
 condition|(
 name|this
@@ -622,6 +582,7 @@ argument_list|(
 name|regionInfo
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 specifier|private
